<resources>
    <string name="app_name">Quickfire</string>
    <string name="quickfire">🔥 Quickfire 🔥</string>
    <string name="party_name">Party Name</string>
    <string name="add_person">Add Person</string>
    <string name="start_matching">Start Matching</string>
    <string name="party_people">Party People</string>
    <string name="create_party">Create Party</string>
    <string name="join_party">Join Party</string>
    <string name="cross">❌</string>
    <string name="tick">✔️</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_my_name">Change my name</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="media">Media</string>
    <string name="tv_show">TV Show</string>
    <string name="movie">Movie</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="solo_play">Solo Play</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="match_found">MATCH FOUND 😍</string>
</resources>
